--- a/static/index.html
+++ b/static/index.html
@@ -14,4 +14,5 @@
   <script src="/js/gameworld.js"></script>
   <script src="/js/controls.js"></script>
   <script src="/js/player.js"></script>
+  <script src="/js/heights.js"></script>
 </html>
