--- a/static/index.html
+++ b/static/index.html
@@ -15,4 +15,7 @@
   <script src="/js/controls.js"></script>
   <script src="/js/player.js"></script>
   <script src="/js/heights.js"></script>
+  <script src="/js/mapparser/cliff.js"></script>
+  <script src="/js/mapparser/GameElement.js"></script>
+  <script src="/js/mapparser/building.js"></script>
 </html>
