show roof of pokecentre

--- a/static/index.html
+++ b/static/index.html
@@ -10,12 +10,10 @@
   <script src="/js/main.js"></script>
   <script src="/js/renderer.js"></script>
   <script src="/js/imagepipeline.js"></script>
-  <script src="/js/imagemapper.js"></script>
-  <script src="/js/gameworld.js"></script>
   <script src="/js/controls.js"></script>
   <script src="/js/player.js"></script>
-  <script src="/js/heights.js"></script>
-  <script src="/js/mapparser/cliff.js"></script>
-  <script src="/js/mapparser/GameElement.js"></script>
-  <script src="/js/mapparser/building.js"></script>
+  <script src="/js/gameworld/gameworld.js"></script>
+  <script src="/js/gameworld/heights.js"></script>
+  <script src="/js/gameworld/mapparser/cliff.js"></script>
+  <script src="/js/gameworld/mapparser/building.js"></script>
 </html>
