--- a/static/index.html
+++ b/static/index.html
@@ -16,4 +16,5 @@
   <script src="/js/gameworld/heights.js"></script>
   <script src="/js/gameworld/mapparser/cliff.js"></script>
   <script src="/js/gameworld/mapparser/building.js"></script>
+  <script src="/js/gameworld/mapparser/bush.js"></script>
 </html>
