renamed some files

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,14 @@
     <title>3D POKEMONS </title>
   </head>
   <body>
+    <div id="uicontrols">
+      <button onclick = "init()">GO</button>
+      <select>
+        <option>city one</option>
+        <option>city two</option>
+        <option>city three</option>
+      </select>
+    </div>
   </body>
   <script src="/js/libs/three.min.js"></script>
   <script src="/js/libs/bluebird.js"></script>
@@ -13,8 +21,9 @@
   <script src="/js/controls.js"></script>
   <script src="/js/player.js"></script>
   <script src="/js/gameworld/gameworld.js"></script>
-  <script src="/js/gameworld/heights.js"></script>
-  <script src="/js/gameworld/mapparser/cliff.js"></script>
-  <script src="/js/gameworld/mapparser/building.js"></script>
-  <script src="/js/gameworld/mapparser/bush.js"></script>
+  <script src="/js/gameworld/pokeparser/heights.js"></script>
+  <script src="/js/gameworld/pokeparser/cliff.js"></script>
+  <script src="/js/gameworld/pokeparser/building.js"></script>
+  <script src="/js/gameworld/pokeparser/bush.js"></script>
+  <script src="/js/gameworld/pokeparser/section.js"></script>
 </html>
