--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
         <option>city two</option>
         <option>city three</option>
       </select>
+      <input type="file" id="fileupload">
     </div>
   </body>
   <script src="/js/libs/three.min.js"></script>
@@ -26,4 +27,5 @@
   <script src="/js/gameworld/pokeparser/building.js"></script>
   <script src="/js/gameworld/pokeparser/bush.js"></script>
   <script src="/js/gameworld/pokeparser/section.js"></script>
+  <script src="/js/upload.js"></script>
 </html>
