added a bunch of stuf

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="uicontrols">
+      <input id="levelnumber" type="number" min="0" max="247">
       <button onclick = "init()">GO</button>
       <select>
         <option>city one</option>
@@ -13,6 +14,7 @@
       </select>
       <input type="file" id="fileupload">
     </div>
+    <div id = "mapname"></div>
   </body>
   <script src="/js/libs/three.min.js"></script>
   <script src="/js/libs/bluebird.js"></script>
