created a new class to extract the map and added tests for it

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <div id="uicontrols">
       <input id="levelnumber" type="number" min="0" max="247">
       <button onclick = "init()">GO</button>
-      <select>
+      <select id="select-level">
         <option>city one</option>
         <option>city two</option>
         <option>city three</option>
