fixed bug that stopped pallet town from loading

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
   <script src="/js/imagepipeline.js"></script>
   <script src="/js/controls.js"></script>
   <script src="/js/player.js"></script>
+  <script src="/js/gameworld/pokeparser/bushparser.js"></script>
   <script src="/js/gameworld/gameworld.js"></script>
   <script src="/js/gameworld/creategameworld.js"></script>
   <script src="/js/gameworld/pokeparser/mapparser.js"></script>
