must have made some changes, i have no idea what they are

--- a/static/index.html
+++ b/static/index.html
@@ -32,5 +32,6 @@
   <script src="/js/gameworld/pokeparser/building.js"></script>
   <script src="/js/gameworld/pokeparser/bush.js"></script>
   <script src="/js/gameworld/pokeparser/section.js"></script>
+  <script src="/js/gameworld/pokeparser/water.js"></script>
   <script src="/js/upload.js"></script>
 </html>
